@@ -10,7 +10,6 @@ import jakarta.ws.rs.core.MultivaluedMap;
 import java.io.IOException;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.commons.lang3.StringUtils;
 
@@ -59,6 +58,6 @@ public class MetadataContextFilter implements ContainerRequestFilter, ContainerR
         .flatMap(Stream::of)
         .filter(StringUtils::isNotBlank)
         .map(String::trim)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
